syntax = "proto3";

package proto;

option go_package = "github.com/sidneychang/no-db/proto";

service KVDB {
  rpc Put (PutRequest) returns (Empty);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Delete (DeleteRequest) returns (Empty);
  rpc ListAllData (Empty) returns (ListAllDataResponse);
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message DeleteRequest {
  string key = 1;
}

message Empty {}

message ListAllDataResponse {
  repeated string keys = 1;
  repeated string values = 2;
}